2002-01-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py: Remove the trailing space in the matches regex.

	(FilterParser.firstmatch): If the regex in headers-file or
	body-file includes quotes, extract the regex from the quotes
	before matching.  This is so the -file methods are consistent with
	headers and body.

2002-01-24  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Changed 'matches' regular expression to expect
	either single or double quotes as the delimiters for the 'headers'
	or 'body' filter sources.

	* (FilterParser.__parserule): Text matched by 'matches' now
	appears in either group 2 or group 3.
	
2002-01-24  Tim Legant  <tim@catseye.net>

	* FilterParser.py (FilterParser): Removed 'whitespace' and
	source_match regular expressions and added 'most_sources',
	'hdrbody_sources' and 'matches' regular expressions. Modified
	'tag_action' regular expression.
	
	* (FilterParser.__readrule): Changed whitespace collapse to simply
	substitue a space for every tab.

	* (FilterParser.__parserule): Rewrote to handle parenthesized
	regular expressions with embedded spaces (for the 'headers' and
	'body' sources).

	* (FilterParser.__adderror): Fixed massive bug. Should have been
	'__exception', not 'exception'.  When 'checking' was True, this
	resulted in a NameError exception.

	* (FilterParser.__buildactions): Fixed to handle multiple spaces
	between headers and actions.

	* (FilterParser.firstmatch): Created 'line' return value by
	calling new module-level function, '_rulestr'.

	* (_rulestr): New function.

2002-01-19  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Rewrite to support multiline,
	whitespace-delimited, multi-action filter files.  The only
	function that didn't change much is FilterParser.firstmatch.

	(FilterParser.firstmatch): Return value changed to a 2-tuple
	(dictionary of actions, string describing matching rule).  The
	string is not necessarily the exact string from the file because